--- a/CV/Css/Style.css
+++ b/CV/Css/Style.css
@@ -517,6 +517,15 @@
         margin: 1px;
     }
 
+    .backgroundb1-Exp-Pro
+    {
+        grid-area: 2 / 1 / 3 / 2;
+        background-image: url(../Images/thered.png);
+        background-size: cover;
+        filter: blur(1.5px);
+        margin: -3.5px 0px 0px 0.5px;
+    }
+
     .b2 {
         top: 486px;
         left: calc(50% + 270px);
@@ -533,6 +542,15 @@
         filter: blur(2px);
     }
 
+    .backgroundb2-Exp-Pro
+    {
+        grid-area: 2 / 1 / 3 / 2;
+        background-image: url(../Images/eurocrm.jpg);
+        background-size: cover;
+        filter: blur(1px);
+        margin: -3.5px 0px 0px 0px;
+    }
+
     .b3 {
         top: 792px;
         left: calc(50% - 270px);
@@ -547,6 +565,14 @@
         background-size: cover;
         margin: 1px;
         filter: blur(2px);
+    }
+    .backgroundb3-Exp-Pro
+    {
+        grid-area: 2 / 1 / 3 / 2;
+        background-image: url(../Images/bellaciao.png);
+        background-size: cover;
+        filter: blur(1px);
+        margin: -3.5px 0px 0px 0px;
     }
 
     .b4 {
@@ -622,6 +648,20 @@
         box-shadow:  0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     }
 
+    .lignetime-Exp-Pro {
+        height: 750px;
+        width: 12px;
+        margin: 0 auto;
+        background: rgb(177, 7, 7);
+    }
+
+    .box-timeline-Exp-Pro {
+        width: 100%;
+        height: auto;
+        position: relative;
+        padding: 100px 0 250px 0;
+    }
+
     span
     {
         font-style: italic;    
@@ -633,6 +673,11 @@
         position: relative;
         left: 200px;
         height: 1450px;
+    }
+    .lignetime-Exp-Pro {
+        position: relative;
+        left: 200px;
+        height: 750px;
     }
     .box-timeline
     {
@@ -850,9 +895,18 @@
         {
             display: none;
         }
+        .lignetime-Exp-Pro
+        {
+            display: none;
+        }
         .box
         {
             margin: 0;
+        }
+        .box-timeline-Exp-Pro
+        {
+            height: 1250px;
+            padding-bottom: 500px;
         }
         .rond
         {
@@ -869,12 +923,27 @@
             height: auto;
             top: 10px;
         }
+        .b1-Exp-Pro
+        {
+            height: auto;
+            top: 30px;
+        }
         .b2
         {
             height: auto;
             top: 460px;
         }
+        .b2-Exp-Pro
+        {
+            height: auto;
+            top: 420px;
+        }
         .b3
+        {
+            height: auto;
+            top: 860px;
+        }
+        .b3-Exp-Pro
         {
             height: auto;
             top: 860px;
