--- a/CV/Style.css
+++ b/CV/Style.css
@@ -7,6 +7,12 @@
     padding: 0;
 }
 
+/* Police d'écriture */
+    @font-face {
+        font-family: "PoliceGoogle1";
+        src: url('SourceCodePro-Regular.ttf');
+    }
+
 /* Bouton navbar et div fille*/
 
     .container-menu
@@ -21,9 +27,11 @@
 
     .btn-menu
     {
-        width: 60px;
-        height: 60px;
-        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(246,13,13,1) 50%, rgba(0,0,0,1) 100%);
+        width: 70px;
+        height: 70px;
+       /*  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(246,13,13,1) 50%, rgba(0,0,0,1) 100%); */
+        background-image: url('Images/testbutton.jpg');
+        background-size: cover;
         border-radius: 50%;
         top: 50%;
         left: 47%;
@@ -31,52 +39,52 @@
         position: absolute;
         z-index: 20;
         cursor: pointer;
-        -webkit-box-shadow: 0px 0px 20px 0.5px rgba(255,255,255,1);
+        /* -webkit-box-shadow: 0px 0px 20px 0.5px rgba(255,255,255,1);
         -moz-box-shadow: 0px 0px 20px 0.5px rgba(255,255,255,1);
-        box-shadow: 0px 0px 20px 0.5px rgba(255,255,255,1);
+        box-shadow: 0px 0px 20px 0.5px rgba(255,255,255,1); */
     }
 
     /* Ligne à l'interieur du bouton avant/après animation */
     .ligne
     {
-        width: 20px;
-        height: 3px;
+        width: 25px;
+        height: 4px;
         border-radius: 5px;
-        background: #e4e0e0;
+        background: #ffffff;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        transition: all 0.1s 0.2s ease-in-out;
+        transition: all 0.1s 0.3s ease-in;
     }
 
     .ligne::before
     {
         content:'';
         position: absolute;
-        bottom: 6px;
-        background : #e4e0e0;
-        width: 20px;
-        height: 3px;
+        bottom: 7px;
+        background : #ffffff;
+        width: 25px;
+        height: 4px;
         border-radius: 5px;
-        transition: all 0.1s 0.2s ease-in-out;
+        transition: all 0.1s 0.3s ease-in-out;
     }
 
     .ligne::after
     {
         content:'';
         position: absolute;
-        top: 6px;
-        background : #e4e0e0;
-        width: 20px;
-        height: 3px;
+        top: 7px;
+        background : #ffffff;
+        width: 25px;
+        height: 4px;
         border-radius: 5px;
-        transition: all 0.1s 0.2s ease-in-out;
+        transition: all 0.1s 0.3s ease-in-out;
     }
 
     .container-menu.active .ligne::before
     {
-        transform: translateY(6px) rotate(-45deg) scale(1.2, 1.2);
+        transform: translateY(7px) rotate(-45deg) scale(1.2, 1.2);
     }
 
     .container-menu.active .ligne
@@ -86,7 +94,7 @@
 
     .container-menu.active .ligne::after
     {
-        transform: translateY(-6px) rotate(45deg) scale(1.2, 1.2);
+        transform: translateY(-7px) rotate(45deg) scale(1.2, 1.2);
     
     }
 
@@ -95,7 +103,7 @@
     .ligne-menu
     {
         position: absolute;
-        background-image: url(Images/button_ligne.jpg);
+        background-image: url(Images/abstract-black-gold-grand-wallpaper-preview.jpg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -103,7 +111,7 @@
         cursor: pointer;
         visibility: hidden;
         height: 40px;
-        width: 220px;
+        width: 255px;
         top: 50%;
         left: 65%;
         transform: translate(-50%,-50%);
@@ -118,6 +126,7 @@
         text-decoration: none;
         color: white;
         font-size: large;
+        font-family: 'PoliceGoogle1';
     }
 
     .ligne-menu1
@@ -151,7 +160,7 @@
     {
         visibility: visible;
         opacity: 1;
-        left: 83%;
+        left: 88%;
         top: 50%;
     } 
 
@@ -159,7 +168,7 @@
     {
         visibility: visible;
         opacity: 1;
-        left: 83%;
+        left: 88%;
         top: 64%;
     } 
 
@@ -167,7 +176,7 @@
     {
         visibility: visible;
         opacity: 1;
-        left: 83%;
+        left: 88%;
         top: 78%;
     } 
 
@@ -175,7 +184,8 @@
     {
         visibility: visible;
         opacity: 1;
-        left: 83%;
+        padding-left: 28px;
+        left: 88%;
         top: 92%;
     } 
 
@@ -183,20 +193,12 @@
     {
         visibility: visible;
         opacity: 1;
-        left: 83%;
+        left: 88%;
         top: 106%;
     } 
 
 /* Fin du bouton navbar */ 
 
-/* Image de profil du CV */
-
-#PDP
-{
-    width: 250px;
-    height: 280px;
-    border-radius : 51% 49% 45% 55% / 57% 54% 46% 43% ;
-}
 
 /* Slide Parallax */
 
@@ -209,6 +211,40 @@
         background: url(Images/1382-silk_purple_dark-375w-667h2xiphone.jpg) no-repeat center fixed;
         background-size: cover;
         z-index: -201;
+    }
+
+    /* Image de profil du CV */
+
+        #PDP
+        {
+            width: 250px;
+            max-width: 250;
+            height: 280px;
+            max-height: 280px;
+            border-radius : 51% 49% 45% 55% / 57% 54% 46% 43% ;
+        }
+
+    #slide1 h1
+    {
+        position: absolute;
+        top : 30px;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-size: calc(1vw + 1.8rem);
+        font-family: 'Aclonica', sans-serif;
+        color: rgb(12, 12, 12);
+        text-shadow: rgb(255, 255, 255) 3px 3px 3px, rgb(255, 255, 255) -3px -3px 3px;
+    }
+
+    #slide1 h2
+    {
+        position: absolute;
+        top : 220px;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-size: calc(1vw + 1.8rem);
+        color: rgb(12, 12, 12);
+        text-shadow: rgb(255, 255, 255) 3px 3px 3px, rgb(255, 255, 255) -3px -3px 3px;
     }
 
     #slide2
@@ -271,3 +307,54 @@
     }
 
 /* Fin de création de la scrollbar */
+
+/* Test ruban */
+.box {
+    width: 200px; height: 300px;
+    position: relative;
+    border: 1px solid #BBB;
+    background: #EEE;
+  }
+  .ribbon {
+    position: absolute;
+    left: -5px; top: -5px;
+    z-index: 1;
+    overflow: hidden;
+    width: 75px; height: 75px;
+    text-align: right;
+  }
+  .ribbon span {
+    font-size: 10px;
+    font-weight: bold;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 20px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    width: 100px;
+    display: block;
+    background: #79A70A;
+    background: linear-gradient(#F70505 0%, #8F0808 100%);
+    box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 19px; left: -21px;
+  }
+  .ribbon span::before {
+    content: "";
+    position: absolute; left: 0px; top: 100%;
+    z-index: -1;
+    border-left: 3px solid #8F0808;
+    border-right: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #8F0808;
+  }
+  .ribbon span::after {
+    content: "";
+    position: absolute; right: 0px; top: 100%;
+    z-index: -1;
+    border-left: 3px solid transparent;
+    border-right: 3px solid #8F0808;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #8F0808;
+  }
